; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_umtx.c_umtxq_signal_queue.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_umtx.c_umtxq_signal_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.umtx_key = type { i32 }
%struct.umtxq_queue = type { i32 }
%struct.umtx_q = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.umtx_key*, i32, i32)* @umtxq_signal_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @umtxq_signal_queue(%struct.umtx_key* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.umtx_key*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.umtxq_queue*, align 8
  %9 = alloca %struct.umtx_q*, align 8
  %10 = alloca i32, align 4
  store %struct.umtx_key* %0, %struct.umtx_key** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %10, align 4
  %11 = load %struct.umtx_key*, %struct.umtx_key** %5, align 8
  %12 = call i32 @umtxq_getchain(%struct.umtx_key* %11)
  %13 = call i32 @UMTXQ_LOCKED_ASSERT(i32 %12)
  %14 = load %struct.umtx_key*, %struct.umtx_key** %5, align 8
  %15 = load i32, i32* %7, align 4
  %16 = call %struct.umtxq_queue* @umtxq_queue_lookup(%struct.umtx_key* %14, i32 %15)
  store %struct.umtxq_queue* %16, %struct.umtxq_queue** %8, align 8
  %17 = load %struct.umtxq_queue*, %struct.umtxq_queue** %8, align 8
  %18 = icmp ne %struct.umtxq_queue* %17, null
  br i1 %18, label %19, label %39

19:                                               ; preds = %3
  br label %20

20:                                               ; preds = %37, %19
  %21 = load %struct.umtxq_queue*, %struct.umtxq_queue** %8, align 8
  %22 = getelementptr inbounds %struct.umtxq_queue, %struct.umtxq_queue* %21, i32 0, i32 0
  %23 = call %struct.umtx_q* @TAILQ_FIRST(i32* %22)
  store %struct.umtx_q* %23, %struct.umtx_q** %9, align 8
  %24 = icmp ne %struct.umtx_q* %23, null
  br i1 %24, label %25, label %38

25:                                               ; preds = %20
  %26 = load %struct.umtx_q*, %struct.umtx_q** %9, align 8
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @umtxq_remove_queue(%struct.umtx_q* %26, i32 %27)
  %29 = load %struct.umtx_q*, %struct.umtx_q** %9, align 8
  %30 = call i32 @wakeup(%struct.umtx_q* %29)
  %31 = load i32, i32* %10, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %10, align 4
  %33 = load i32, i32* %6, align 4
  %34 = icmp sge i32 %32, %33
  br i1 %34, label %35, label %37

35:                                               ; preds = %25
  %36 = load i32, i32* %10, align 4
  store i32 %36, i32* %4, align 4
  br label %41

37:                                               ; preds = %25
  br label %20

38:                                               ; preds = %20
  br label %39

39:                                               ; preds = %38, %3
  %40 = load i32, i32* %10, align 4
  store i32 %40, i32* %4, align 4
  br label %41

41:                                               ; preds = %39, %35
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local i32 @UMTXQ_LOCKED_ASSERT(i32) #1

declare dso_local i32 @umtxq_getchain(%struct.umtx_key*) #1

declare dso_local %struct.umtxq_queue* @umtxq_queue_lookup(%struct.umtx_key*, i32) #1

declare dso_local %struct.umtx_q* @TAILQ_FIRST(i32*) #1

declare dso_local i32 @umtxq_remove_queue(%struct.umtx_q*, i32) #1

declare dso_local i32 @wakeup(%struct.umtx_q*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
